src/styles/global.css
@media (min-width: 768px) {
  /* Safari desktop hack */
  [data-is-layer-drawer="true"] .MuiPaper-root {
    background-color: unset;
    width: 1px;
  }
}

#new-layout .leaflet-right > .leaflet-control {
  margin-bottom: 6px !important;
}
#new-layout .leaflet-bottom.leaflet-left {
  z-index: 1050 !important;
}
#new-layout .leaflet-bottom.leaflet-left > .leaflet-control {
  margin-bottom: 20px !important;
  z-index: unset;
}
@media only screen and (max-width: 600px) {
  #new-layout .leaflet-bottom.leaflet-left > .leaflet-control {
    margin-bottom: 0px !important;
    margin: 0px !important;
  }
  #new-layout .leaflet-bottom.leaflet-right {
    z-index: 1050 !important;
  }
  #new-layout .leaflet-top.leaflet-right {
    z-index: 1060 !important;
  }
}

